fix: Reset contact line font-size on mobile devices.

--- a/style_new.css
+++ b/style_new.css
@@ -133,4 +133,8 @@ a:active {
     p.big {
         font-size: 1.66em;
     }
+
+    .contact {
+        font-size: 1em;
+    }
 }
